# ai-dl-bert

./: .env.docker  .env.minikube  .gitignore  Dockerfile  Dockerfile_old  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-docker-build-push.yaml  train.yaml
notebooks/: example.ipynb
src/_utils/: hydra_instantiators.py  logging.py
src/serving/: config.py  emotions-classifier.py  schemas.py  serve.py
src/training/: config.py  data.py  model.py  tune.py
