[project]
name = "ai-dl-bert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "dvc[s3]>=3.64.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.6",
    "mlflow>=3.6.0",
    "ray[data,serve,train,tune]>=2.51.1",
    "transformers>=4.57.1",
]
