[project]
name = "ai-dl-bert"
version = "0.1.0"
description = "DistilBERT emotion classification with MLOps pipeline - PyTorch Lightning, MLflow, Ray Tune, and Ray Serve"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Minimal shared dependencies
    "mlflow>=3.6.0",
    "pydantic-settings>=2.12.0",
    "torch>=2.5.0",
    "rich>=14.2.0",
    "ray[default]>=2.51.1",
]

[project.optional-dependencies]
# Training-specific dependencies
training = [
    "dvc[s3]>=3.64.0",
    "lightning>=2.5.6",
    "nvidia-ml-py>=13.580.82",
    "pyrsmi>=1.1.0",
    "ray[data,train,tune]>=2.51.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]

# Serving-specific dependencies
serving = [
    "fastapi>=0.116.1",
    "ray[serve]>=2.48.0",
    "numpy>=1.24.0",
]

[dependency-groups]
# Development dependencies (local-only, not published)
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
]


[tool.uv]
concurrent-builds = 4
concurrent-downloads = 8
concurrent-installs = 4
